--- a/config.toml
+++ b/config.toml
@@ -56,7 +56,7 @@ github = "https://github.com/"
 
 # Header
 logo = "images/logo.png"
-fabFormURL = "https://formspree.io/f/meqwzqeb"
+fabFormURL = "https://formspree.io/f/xwkjwdad"
 googleAnalytics = "UA-175025671-2"
 
 # Footer
